Add a use counter for getComputedStyle outside the flat tree.

We would like to return empty styles for elements which are connected but
not part of the flat tree. That is, shadow host children which are not
slotted or any nodes in its flat subtree.

Bug: 831568
Change-Id: Ifd6ab89196a83571044ca995198e3e31c904304e
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1916460
Commit-Queue: Rune Lillesveen <futhark@chromium.org>
Reviewed-by: Morten Stenshorne <mstensho@chromium.org>
Cr-Commit-Position: refs/heads/master@{#715234}

Former-commit-id: 09d146520d6bd2fe028a2c97af44fc3a539778e3